--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,7 @@ AC_PROG_GCC_TRADITIONAL
 AM_PROG_CC_C_O
 AM_PROG_AS
 AC_PROG_RANLIB
-# AC_PROG_CXX
+AC_PROG_CXX
 
 dnl Checks for header files
 AC_HEADER_STDC
