--- a/Makefile.am
+++ b/Makefile.am
@@ -50,6 +50,7 @@ cpuminer_SOURCES = \
   crypto/aesb.c \
   lyra2/Lyra2.c lyra2/Sponge.c \
   algo/axiom.c \
+  algo/bastion.c \
   algo/blake.c \
   algo/blakecoin.c \
   algo/blake2.c \
