--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -202,6 +202,7 @@
       <Optimization Condition="'$(Configuration)'=='Release'">Full</Optimization>
     </ClCompile>
     <ClCompile Include="algo\axiom.c" />
+    <ClCompile Include="algo\bastion.c" />
     <ClCompile Include="algo\blake.c" />
     <ClCompile Include="algo\blakecoin.c" />
     <ClCompile Include="algo\blake2.c" />
