yescrypt algo (basic and simd)
compatible with linux, mingw64 and vstudio

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -49,6 +49,8 @@ cpuminer_SOURCES = \
   crypto/hash.c \
   crypto/aesb.c \
   lyra2/Lyra2.c lyra2/Sponge.c \
+  yescrypt/yescrypt-common.c yescrypt/yescrypt-best.c \
+  yescrypt/sha256_Y.c \
   algo/axiom.c \
   algo/bastion.c \
   algo/blake.c \
@@ -84,6 +86,7 @@ cpuminer_SOURCES = \
   algo/x13.c \
   algo/x14.c \
   algo/x15.c \
+  algo/yescrypt.c \
   algo/zr5.c
 
 disable_flags =
