--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="algo\cryptonight.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\decred.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\fresh.c">
       <Filter>algo</Filter>
     </ClCompile>
