small changes in --version output
+ add sph haval which was half there in the vstudio project

--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="sha3\sph_hamsi_helper.c">
       <Filter>sph</Filter>
     </ClCompile>
+    <ClCompile Include="sha3\sph_haval.c">
+      <Filter>sph</Filter>
+    </ClCompile>
     <ClCompile Include="sha3\sph_hefty1.c">
       <Filter>sph</Filter>
     </ClCompile>
