--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -268,6 +268,7 @@
     <ClCompile Include="sha3\sph_hamsi_helper.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="sha3\sph_haval.c" />
     <ClCompile Include="sha3\sph_whirlpool.c" />
     <ClCompile Include="sha3\sph_gost.c" />
     <ClCompile Include="sha3\md_helper.c">
