add x11evo algo
Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -84,6 +84,7 @@ cpuminer_SOURCES = \
   algo/skein.c \
   algo/skein2.c \
   algo/s3.c \
+  algo/x11evo.c \
   algo/x11.c \
   algo/x13.c \
   algo/x14.c \
