--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -236,6 +236,7 @@
     <ClCompile Include="algo\sibcoin.c" />
     <ClCompile Include="algo\skein.c" />
     <ClCompile Include="algo\skein2.c" />
+    <ClCompile Include="algo\x11evo.c" />
     <ClCompile Include="algo\x11.c" />
     <ClCompile Include="algo\x13.c" />
     <ClCompile Include="algo\x14.c" />
