--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -237,6 +237,7 @@
     <ClCompile Include="algo\sibcoin.c" />
     <ClCompile Include="algo\skein.c" />
     <ClCompile Include="algo\skein2.c" />
+    <ClCompile Include="algo\veltor.c" />
     <ClCompile Include="algo\x11evo.c" />
     <ClCompile Include="algo\x11.c" />
     <ClCompile Include="algo\x13.c" />
@@ -273,7 +274,7 @@
     </ClCompile>
     <ClCompile Include="sha3\sph_haval.c" />
     <ClCompile Include="sha3\sph_whirlpool.c" />
-    <ClCompile Include="sha3\sph_gost.c" />
+    <ClCompile Include="sha3\gost_streebog.c" />
     <ClCompile Include="sha3\md_helper.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
     </ClCompile>
@@ -328,7 +329,7 @@
     <ClInclude Include="sha3\sph_cubehash.h" />
     <ClInclude Include="sha3\sph_echo.h" />
     <ClInclude Include="sha3\sph_fugue.h" />
-    <ClInclude Include="sha3\sph_gost.h" />
+    <ClInclude Include="sha3\gost_streebog.h" />
     <ClInclude Include="sha3\sph_groestl.h" />
     <ClInclude Include="sha3\sph_haval.h" />
     <ClInclude Include="sha3\sph_hefty1.h" />
