prepare xevan algo (default stratum factor 256)

--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClCompile Include="algo\x17.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\xevan.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\pluck.c">
       <Filter>algo</Filter>
     </ClCompile>
