--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -255,6 +255,9 @@
     <ClCompile Include="algo\skein.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\timetravel.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\veltor.c">
       <Filter>algo</Filter>
     </ClCompile>
