--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -204,6 +204,7 @@
     </ClCompile>
     <ClCompile Include="algo\axiom.c" />
     <ClCompile Include="algo\bastion.c" />
+    <ClCompile Include="algo\bitcore.c" />
     <ClCompile Include="algo\blake.c" />
     <ClCompile Include="algo\blakecoin.c" />
     <ClCompile Include="algo\blake2.c" />
