add the JHA algo
Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -69,6 +69,7 @@ cpuminer_SOURCES = \
   algo/groestl.c \
   algo/heavy.c \
   algo/ink.c \
+  algo/jha.c \
   algo/lbry.c \
   algo/luffa.c \
   algo/lyra2re.c \
