--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -213,6 +213,9 @@
     <ClCompile Include="algo\keccak.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\jha.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\lbry.c">
       <Filter>algo</Filter>
     </ClCompile>
