--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -242,6 +242,7 @@
     <ClCompile Include="algo\skein.c" />
     <ClCompile Include="algo\skein2.c" />
     <ClCompile Include="algo\timetravel.c" />
+    <ClCompile Include="algo\tribus.c" />
     <ClCompile Include="algo\veltor.c" />
     <ClCompile Include="algo\x11evo.c" />
     <ClCompile Include="algo\x11.c" />
