x16r algo: beware, this algo hashrate is not constant
unlike timetravel, a fast algo can be used 16 times in theory

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -99,6 +99,7 @@ cpuminer_SOURCES = \
   algo/x13.c \
   algo/x14.c \
   algo/x15.c \
+  algo/x16r.c \
   algo/x17.c \
   algo/xevan.c \
   algo/yescrypt.c \
