--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -285,6 +285,9 @@
     <ClCompile Include="algo\x15.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\x16r.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\x17.c">
       <Filter>algo</Filter>
     </ClCompile>
