NOROD: Fix compilation issues in MacOS 10.13.x / Xcode 9.x NOROD: Assuming openssl installed via brew

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ mingw32-config.cache
 */.dirstamp
 
 *.iml
+aesb-arm.S.orig
+aesb-x64.S.orig
+aesb-x86.S.orig
+scrypt-arm.S.orig
+scrypt-x64.S.orig
+scrypt-x86.S.orig
+sha2-arm.S.orig
+sha2-x64.S.orig
+sha2-x86.S.orig
