add x16s algo (PigeonCoin) (#26)

--- a/Makefile.am
+++ b/Makefile.am
@@ -100,6 +100,7 @@ cpuminer_SOURCES = \
   algo/x14.c \
   algo/x15.c \
   algo/x16r.c \
+  algo/x16s.c \
   algo/x17.c \
   algo/xevan.c \
   algo/yescrypt.c \
