--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -250,6 +250,7 @@
     <ClCompile Include="algo\x14.c" />
     <ClCompile Include="algo\x15.c" />
     <ClCompile Include="algo\x16r.c" />
+    <ClCompile Include="algo\x16s.c" />
     <ClCompile Include="algo\x17.c" />
     <ClCompile Include="algo\xevan.c" />
     <ClCompile Include="algo\yescrypt.c" />
