--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -288,6 +288,9 @@
     <ClCompile Include="algo\x16r.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\x16s.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\x17.c">
       <Filter>algo</Filter>
     </ClCompile>
