--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -246,6 +246,7 @@
     <ClCompile Include="algo\veltor.c" />
     <ClCompile Include="algo\x11evo.c" />
     <ClCompile Include="algo\x11.c" />
+    <ClCompile Include="algo\x12.c" />
     <ClCompile Include="algo\x13.c" />
     <ClCompile Include="algo\x14.c" />
     <ClCompile Include="algo\x15.c" />
