--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -276,6 +276,9 @@
     <ClCompile Include="algo\x11.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\x12.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\x13.c">
       <Filter>algo</Filter>
     </ClCompile>
