phi and phi2 algos
phi2 is a new test algo for LUX, may change again if required...

cpu hashrate remains almost identical, 230 vs 250 kH/s
but gpu speed is slower by a bigger factor.

It should be harder to implement on fpgas,
and fixes the original algo power issue due to over-optimised heavy gpu code

Adding lyra and some other memory ops allow the gpu to breath between heavy algos (gost/echo)

--- a/Makefile.am
+++ b/Makefile.am
@@ -78,6 +78,8 @@ cpuminer_SOURCES = \
   algo/myr-groestl.c \
   algo/keccak.c \
   algo/pentablake.c \
+  algo/phi1612.c \
+  algo/phi2.c \
   algo/quark.c \
   algo/neoscrypt.c \
   algo/nist5.c \
