--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -246,6 +246,12 @@
     <ClCompile Include="algo\pentablake.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\phi1612.c">
+      <Filter>algo</Filter>
+    </ClCompile>
+    <ClCompile Include="algo\phi2.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\quark.c">
       <Filter>algo</Filter>
     </ClCompile>
