--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -244,6 +244,7 @@
     <ClCompile Include="algo\sibcoin.c" />
     <ClCompile Include="algo\skein.c" />
     <ClCompile Include="algo\skein2.c" />
+    <ClCompile Include="algo\sonoa.c" />
     <ClCompile Include="algo\timetravel.c" />
     <ClCompile Include="algo\tribus.c" />
     <ClCompile Include="algo\veltor.c" />
