--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -258,6 +258,7 @@
     <ClCompile Include="algo\x16r.c" />
     <ClCompile Include="algo\x16s.c" />
     <ClCompile Include="algo\x17.c" />
+    <ClCompile Include="algo\x20r.c" />
     <ClCompile Include="algo\xevan.c" />
     <ClCompile Include="algo\yescrypt.c" />
     <ClCompile Include="algo\zr5.c" />
@@ -289,6 +290,8 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="sha3\sph_haval.c" />
+    <ClCompile Include="sha3\sph_panama.c" />
+    <ClCompile Include="sha3\sph_radiogatun.c" />
     <ClCompile Include="sha3\sph_whirlpool.c" />
     <ClCompile Include="sha3\gost_streebog.c" />
     <ClCompile Include="sha3\md_helper.c">
@@ -358,6 +361,8 @@
     <ClInclude Include="sha3\sph_simd.h" />
     <ClInclude Include="sha3\sph_skein.h" />
     <ClInclude Include="sha3\sph_hamsi.h" />
+    <ClInclude Include="sha3\sph_panama.h" />
+    <ClInclude Include="sha3\sph_radiogatun.h" />
     <ClInclude Include="sha3\sph_types.h" />
     <ClInclude Include="sha3\sph_whirlpool.h" />
     <ClInclude Include="yescrypt\sha256_Y.h" />
