--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -216,6 +216,7 @@
     <ClCompile Include="algo\decred.c" />
     <ClCompile Include="algo\drop.c" />
     <ClCompile Include="algo\fresh.c" />
+    <ClCompile Include="algo\geek.c" />
     <ClCompile Include="algo\groestl.c" />
     <ClCompile Include="algo\heavy.c" />
     <ClCompile Include="algo\keccak.c" />
